--- a/rjc_payment_intransit/views/account_payment_intransit_view.xml
+++ b/rjc_payment_intransit/views/account_payment_intransit_view.xml
@@ -1,27 +1,15 @@
 <odoo>
-
     <record id="account_payment_intransit_view_form" model="ir.ui.view">
         <field name="name">account.payment.intransit.form</field>
         <field name="model">account.payment.intransit</field>
         <field name="inherit_id" ref="account_payment_intransit.account_payment_intransit_view_form"/>
         <field name="arch" type="xml">
-            <field name="move_line_id" position="attributes">
-                <attribute name="string">Payment Number</attribute>
-            </field>
             <field name="date_payment" position="attributes">
                 <attribute name="invisible">True</attribute>
             </field>
-            <field name="due_date_payment" position="attributes">
-                <attribute name="string">Date</attribute>
-                <attribute name="invisible">True</attribute>
-            </field>
-            <field name="receipt_type" position="before">
-                <field name="bank_branch"/>
-            </field>
-            <field name="receipt_type" position="after">
+            <field name="payment_intransit_type" position="after">
                 <field name="due_date"/>
             </field>
         </field>
     </record>
-
 </odoo>
