--- a/rjc_account_form/reports/receipt_voucher_layout.xml
+++ b/rjc_account_form/reports/receipt_voucher_layout.xml
@@ -44,15 +44,15 @@
                 </div>
                 <table class="table table-sm">
                     <thead>
-                        <tr class="text-center">
+                        <tr>
                             <th>#</th>
                             <th>Date</th>
                             <th>Invoice No.</th>
-                            <th>ยอดเต็ม</th>
-                            <th>ยอดสุทธิ</th>
-                            <th>ชำระแล้ว</th>
-                            <th>ชำระครั้งนี้</th>
-                            <th>ยอดค้างชำระ</th>
+                            <th class="text-right">ยอดเต็ม</th>
+                            <th class="text-right">ยอดสุทธิ</th>
+                            <th class="text-right">ชำระแล้ว</th>
+                            <th class="text-right">ชำระครั้งนี้</th>
+                            <th class="text-right">ยอดค้างชำระ</th>
                         </tr>
                     </thead>
                     <tbody>
@@ -158,14 +158,14 @@
                 <t t-if="payment_intransit">
                     <table class="table table-sm">
                         <thead>
-                            <tr class="text-center">
+                            <tr>
                                 <th>Bank/Branch</th>
                                 <th>Type</th>
                                 <th>Check No.</th>
-                                <th>Due Date</th>
-                                <th>Amount</th>
-                                <th>Payin Date</th>
-                                <th>Bank/Branch</th>
+                                <th class="text-center">Due Date</th>
+                                <th class="text-right">Amount</th>
+                                <th class="text-center">Payin Date</th>
+                                <th class="text-center">Bank/Branch</th>
                             </tr>
                         </thead>
                         <tbody>
@@ -195,13 +195,7 @@
                                     <td class="text-right">
                                         <span t-field="line.allocation" t-options='{"widget": "monetary", "display_currency": o.currency_id}'/>
                                     </td>
-                                    <td>
-                                        <span t-field="line.date_payment"/>
-                                    </td>
-                                    <td>
-                                        <span t-field="o.journal_id"/>
-                                    </td>
-                                    <!-- TODO : Waiting feedback -->
+                                    <td/>
                                     <td/>
                                 </tr>
                             </t>
