[FIX] payment_intransit domain and list view

--- a/rjc_payment_intransit/views/account_payment_intransit_view.xml
+++ b/rjc_payment_intransit/views/account_payment_intransit_view.xml
@@ -4,12 +4,26 @@
         <field name="model">account.payment.intransit</field>
         <field name="inherit_id" ref="account_payment_intransit.account_payment_intransit_view_form"/>
         <field name="arch" type="xml">
+            <field name="bank_journal_id" position="attributes">
+                <attribute name="domain">[('company_id', '=', company_id), '|', '&amp;', ('type', '=', 'bank'), ('bank_account_id', '!=', False), ('type', '=', 'cash')]</attribute>
+            </field>
             <field name="date_payment" position="attributes">
                 <attribute name="invisible">True</attribute>
             </field>
             <field name="payment_intransit_type" position="after">
                 <field name="due_date"/>
             </field>
+        </field>
+    </record>
+
+    <record id="view_payment_intransit_search_inherit" model="ir.ui.view">
+        <field name="name">account.payment.intransit.search</field>
+        <field name="model">account.payment.intransit</field>
+        <field name="inherit_id" ref="account_payment_intransit.view_payment_intransit_search"/>
+        <field name="arch" type="xml">
+            <xpath expr="//search" position="inside">
+                <field name="partner_id" string="Partner Name"/>
+            </xpath>
         </field>
     </record>
 </odoo>
