--- a/rjc_account_form/reports/receipt_layout.xml
+++ b/rjc_account_form/reports/receipt_layout.xml
@@ -1,5 +1,5 @@
 <odoo>
-    <template id="rjc_payment_receipt_layout_report">
+    <template id="rjc_receipt_layout_report">
         <div class="header">
             <div class="print_head">
                 <div class="row">
@@ -21,7 +21,7 @@
                     <h4><b><span t-field="o.company_id.name"/></b></h4>
                 </div>
                 <div class="col-4 text-center">
-                    <h4><b>RECEIPT VOUCHER</b></h4>
+                    <h4><b>RECEIPT</b></h4>
                 </div>
                 <div class="col-1"/>
                 <div class="col-3">
@@ -275,5 +275,13 @@
                 </div>
             </div>
         </div>
+    </template>
+
+    <template id="rjc_receipt_pdf">
+        <t t-call="web.html_container">
+            <t t-foreach="docs" t-as="o">
+                <t t-call="rjc_account_form.rjc_receipt_layout_report"/>
+            </t>
+        </t>
     </template>
 </odoo>
