--- a/rjc_account_form/reports/account_style.xml
+++ b/rjc_account_form/reports/account_style.xml
@@ -2,6 +2,7 @@
     <template id="report_assets_common" name="Invoice common assets" inherit_id="web.report_assets_common">
         <xpath expr="." position="inside">
             <link rel="stylesheet" type="text/scss" href="/rjc_account_form/static/scss/style_account_report.scss"/>
+            <link rel="stylesheet" type="text/scss" href="/rjc_account_form/static/scss/style_withholding_tax_cert.scss"/>
         </xpath>
     </template>
 </odoo>
