--- a/rjc_account_form/reports/receipt_layout.xml
+++ b/rjc_account_form/reports/receipt_layout.xml
@@ -19,9 +19,10 @@
             <div class="row">
                 <div class="col-4">
                     <h4><b><span t-field="o.company_id.name"/></b></h4>
+                    <span>Phone : <span t-field="o.company_id.phone"/></span>
                 </div>
                 <div class="col-4 text-center">
-                    <h4><b>RECEIPT</b></h4>
+                    <h4><b>ใบเสร็จรับเงิน/RECEIPT</b></h4>
                 </div>
                 <div class="col-1"/>
                 <div class="col-3">
@@ -245,34 +246,6 @@
                         </tfoot>
                     </table>
                 </t>
-                <div class="row">
-                    <div class="col-3 horizontal_dotted_line" data-content=".........................">
-                        Approved By
-                    </div>
-                    <div class="col-3 horizontal_dotted_line" data-content="...........................">
-                        Account By
-                    </div>
-                    <div class="col-3 horizontal_dotted_line" data-content="............................">
-                        Booked By
-                    </div>
-                    <div class="col-3 horizontal_dotted_line" data-content=".........................">
-                        Received By
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-3 horizontal_dotted_line" data-content=".....................................">
-                        Date
-                    </div>
-                    <div class="col-3 horizontal_dotted_line" data-content=".....................................">
-                        Date
-                    </div>
-                    <div class="col-3 horizontal_dotted_line" data-content=".....................................">
-                        Date
-                    </div>
-                    <div class="col-3 horizontal_dotted_line" data-content=".....................................">
-                        Date
-                    </div>
-                </div>
             </div>
         </div>
     </template>
