--- a/rjc_account_form/static/scss/style_account_report.scss
+++ b/rjc_account_form/static/scss/style_account_report.scss
@@ -125,6 +125,22 @@
     }
 }
 
+// style account billing
+.billing_form {
+    .billing_state {
+        position: fixed;
+        top: 40px;
+        right: 200px;
+    }
+    td.amount_text {
+        table-layout: fixed;
+        width: 80%;
+    }
+    .bottom-border-black {
+        border-bottom: 1px solid black !important;
+    }
+}
+
 //head_date-company-page
 .header {
     .print_head {
